services/demo-v56/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-v56
  labels:
    name: demo-v56
    app: demo-v56-api
