services/demo-v56/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-v56
  namespace: demo-v56
  labels:
    app: demo-v56
    version: v1.0.0
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: demo-v56
  template:
    metadata:
      labels:
        app: demo-v56
        version: v1.0.0
      annotations:
        argocd.argoproj.io/sync-wave: "0"
        timestamp: "1760411430"
        deployment.kubernetes.io/revision: "1"
    spec:
      containers:
      - name: demo-v56
        image: ghcr.io/ductri09072004/demo-v56:main-3c1de659b48c222a939f0efc761f4c6595490105
        imagePullPolicy: Always
        ports:
        - containerPort: 7002
          name: http
        resources:
         requests:
            memory: "128Mi"
            cpu: "100m"
            limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /api/health
            port: 7002
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /api/health
            port: 7002
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
