services/demo-v56/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-v56-service
  namespace: demo-v56
  labels:
    app: demo-v56
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: {PORT}
    protocol: TCP
    name: http
  selector:
    app: demo-v56
